--- a/financely/src/App.module.css
+++ b/financely/src/App.module.css
@@ -1,11 +1,11 @@
 .Wrapper{
     width: 100%;
     max-width: 1470px;
-    background-color: white;
+    background-color: rgb(242, 242, 242);
     margin: 0 auto;
 
     display: grid;
-    grid-template-columns: 250px 1fr;
+    grid-template-columns: 240px 1fr;
     gap: 2rem;
     align-items: flex-start;
 }
