--- a/financely/src/components/infobox.module.css
+++ b/financely/src/components/infobox.module.css
@@ -1,14 +1,15 @@
 .infobox{
-    width:480px;
+    width:500px;
     height: 300px;
     border-radius: 15px;
     margin: 20px;
-    border: 1px solid rgb(211, 153, 255);
+    border: 1px solid #0F76C0;
 
-    background-color: rgb(228, 241, 241);
+    background-color: rgb(255, 255, 255);
     padding: 2.5rem 1.25rem 2.5rem 1.25rem;
+
 }
 
-.cardImg{
-    width: 100px;
+h2{
+    color:#FFA500;
 }
