--- a/financely/src/index.css
+++ b/financely/src/index.css
@@ -2,7 +2,7 @@
 
 
 body{
-    background-color: white;
+    background-color: #000000;
     padding:0;
     margin:0;
     font-family: 'Poppins', sans-serif;
