--- a/financely/src/components/Resume.module.css
+++ b/financely/src/components/Resume.module.css
@@ -5,7 +5,7 @@
 
 .resumeContainer{
 
-    width:1115px;
+    width:70rem;
     background-color: white;
     height: 250px;
     display: flex;
@@ -17,7 +17,7 @@
     margin-left: 22px
 }
 .incomes, .spends, .budget{
-    width:200px;
+    width:12.5rem;
     height: 150px;
     background-color: green;
     border-radius: 10px;
