--- a/financely/src/components/infobox.module.css
+++ b/financely/src/components/infobox.module.css
@@ -1,15 +1,15 @@
 .infobox{
-    width:500px;
-    height: 300px;
+    width:31.25rem;
+    height: 22rem;
     border-radius: 15px;
     margin: 20px;
-    border: 1px solid #0F76C0;
+    border: 1px solid #dfdfdf;
 
     background-color: rgb(255, 255, 255);
-    padding: 2.5rem 1.25rem 2.5rem 1.25rem;
+    padding: 1rem 1.25rem 2.5rem 1.25rem;
 
 }
 
-h2{
+h3{
     color:#FFA500;
 }
